# showgraph-py

./: .flake8  .gitignore  .pycodestyle  .pylintrc  README.md  process-all.sh  pyproject.toml
examples/: generate-all.sh  generate_small.sh
examples/simple/: generate.py  graph.gv.txt
src/: install-app.sh  install-deps.sh  install-devel.sh  requirements.txt  setup.py
src/showgraph/: datadict.py  graphviz.py  io.py
src/testshowgraph/: __init__.py  runtests.py  test_datadict.py  test_graphviz.py
tools/: codecheck.sh  doccheck.sh  notrailingwhitespaces.sh  pylint3.config  typecheck.sh
